[gd_scene load_steps=7 format=3 uid="uid://dolnhrgbbit5e"]

[ext_resource type="Script" uid="uid://bq8q3ogy1bmqh" path="res://Juego/interfaz_win.gd" id="1_b3k0e"]
[ext_resource type="PackedScene" uid="uid://bm6a7wkfig084" path="res://botones/list_button.tscn" id="2_j7ass"]
[ext_resource type="Theme" uid="uid://vrtl02te16pc" path="res://themes/theme_win.tres" id="2_ocmen"]
[ext_resource type="PackedScene" uid="uid://f4niqragqo11" path="res://botones/return_button.tscn" id="3_j7ass"]
[ext_resource type="Theme" uid="uid://drpdhwp0ewgo" path="res://themes/theme_juego.tres" id="3_xx4v2"]
[ext_resource type="PackedScene" uid="uid://d31q55ok6qpc8" path="res://botones/next_button.tscn" id="4_ocmen"]

[node name="Interfaz_win" type="CanvasLayer"]
script = ExtResource("1_b3k0e")

[node name="PcontainerElements" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -139.5
offset_right = 123.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ocmen")

[node name="VcontainerAll" type="VBoxContainer" parent="PcontainerElements"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PcontainerElements/VcontainerAll"]
layout_mode = 2
theme = ExtResource("3_xx4v2")
theme_type_variation = &"titleWinLabel"
text = "Winner!!"
horizontal_alignment = 1

[node name="HcontainerScore" type="HBoxContainer" parent="PcontainerElements/VcontainerAll"]
layout_mode = 2

[node name="ScoreLabel1" type="Label" parent="PcontainerElements/VcontainerAll/HcontainerScore"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score:"
horizontal_alignment = 1

[node name="ScoreLabel2" type="Label" parent="PcontainerElements/VcontainerAll/HcontainerScore"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="HcontainerTime" type="HBoxContainer" parent="PcontainerElements/VcontainerAll"]
layout_mode = 2

[node name="TimeLabel1" type="Label" parent="PcontainerElements/VcontainerAll/HcontainerTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time:"
horizontal_alignment = 1

[node name="TimeLabel2" type="Label" parent="PcontainerElements/VcontainerAll/HcontainerTime"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Hbotones" type="HBoxContainer" parent="PcontainerElements/VcontainerAll"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="list_button" parent="PcontainerElements/VcontainerAll/Hbotones" instance=ExtResource("2_j7ass")]
layout_mode = 2

[node name="return_button" parent="PcontainerElements/VcontainerAll/Hbotones" instance=ExtResource("3_j7ass")]
layout_mode = 2

[node name="next_button2" parent="PcontainerElements/VcontainerAll/Hbotones" instance=ExtResource("4_ocmen")]
layout_mode = 2
